# hrrr-wind-experiment

./: .gitignore  AGENTS.md  README.md  fetch_hrrr.py  pyproject.toml  submit_windninja_job.slurm  visualization.py  windninja.def  windninja_runner.py
notebooks/: 01_hrrr_windninja_workflow.ipynb
